# cplus-opencv-como

./: .gitignore  CMakeLists.txt
como/src/: COMO.cpp  como_engine.cpp  como_engine.h  fuzzificator.cpp  fuzzificator.h  quantifier.cpp  quantifier.h
ide/: opencv-como.sln  opencv-como.vcxproj  opencv-como.vcxproj.filters  opencv-como_x64d.props
ide/x64/Debug/: opencv-como.ilk  vc140.idb
ide/x64/Debug/opencv-como.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opencv-como.lastbuildstate
ide/xcode/opencv-como.xcodeproj/: project.pbxproj
ide/xcode/opencv-como.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ide/xcode/opencv-como.xcodeproj/project.xcworkspace/xcuserdata/skletz.xcuserdatad/: UserInterfaceState.xcuserstate
ide/xcode/opencv-como.xcodeproj/xcuserdata/skletz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ide/xcode/opencv-como.xcodeproj/xcuserdata/skletz.xcuserdatad/xcschemes/: opencv-como.xcscheme  xcschememanagement.plist
testdata/: test.xml  test_img_1.xml  test_img_2.xml  test_img_3.xml  test_img_4.xml
